# chasm

./: .gitignore  README.md  admixed_genotypes_python.npz  et --mixed deef1a8  geno_simulation.txt  pyproject.toml  requirements.txt  setup.py
chasm/: admix_sim.py  admixed_genotypes_example.csv  admixed_genotypes_quickdemo.csv  allele_sharing_lib.py  calculate_true_maf_per_pop.py  coalescent_kpop_port.py  create_LD_scores_windows.py  create_genotype.py  demo_generate_admixed_genotypes.py  glob.py  helpers.py  kpop.py  make_inbred.py
notebooks/: 01 Extract SNPs from Sumstat.ipynb  01 Finding Best SNPs.ipynb  01 Loading Data.ipynb  01_geno_simul_variables.ipynb  06 Nathans Data.ipynb  99 01 Create Sumstat and PRS.ipynb  helpers.py
notebooks/1000_genomes_notebooks/: 01 run plink on 1000G and divide into chunks.ipynb  01 run plink on 1000G.ipynb  02 calculate PCs.ipynb  03 Calculate MAF reconstruction.ipynb  03 calculate PCs deprecated.ipynb
notebooks/PGS_catalog/: PGS000001.txt
notebooks/coalescence_simulation_notebooks/: 01 Create Admixted Genotype Data (Python).ipynb  01 Create Admixted Genotype Data.ipynb  01 Create Mixed Genotype Data.ipynb  01 Create Outbred Genotype Data.ipynb  01 Create inbred and outbred Genotype Data.ipynb  (+19 more)
python_geno_simulation/: allele_sharing_simulation.py  coalescent_sim.py  create_geno.py
rstudio_geno_simulation/: allele_sharing_simulation.R  create_geno.R  geno_simulation.txt  simulated_genotypes_G20_L20_c20_k10_M0.1.csv
scripts/: create_LD_scores.py  create_genos.py  create_humans.py  helpers.py  lower_dim.py  parse_vars.py
(+49 files in other folders)
